--- a/PUT_A_FOLDER_NAME/index.html
+++ b/PUT_A_FOLDER_NAME/index.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-    <embed src="151forever" style="width: 100%; height: 100vh;">
+    <embed src="151forever.swf" style="width: 100%; height: 100vh;">
     <script src="ruffle/ruffle.js"></script>
 </body>
 </html>
